2002-03-17  Nick Drochak  <ndrochak@gol.com>

	* class.xml: Added class I stubbed out:
	ApplicationDirectoryMembershipCondition

2002-01-14  Nick Drochak  <ndrochak@gol.com>

	* class.xml: Added classes I implemented.

2002-01-07 John Barnette <jbarn@httcb.net>

	* type-maintainers.xml: new format for information.

2002-01-05 Nick Drochak  <ndrochak@gol.com>

	* .cvsignore: ignore cormissing file which is generated by 
	/mcs/tools/corcompare.exe

2001-11-19	Daniel Weber <daniel-weber@austin.rr.co>
	* class.xml : Added System.Xml classes
	* maintainers.xml: Added myself
2001-10-11

	* ByMaintainer.xsl: support for sorting classnames
	* ByNamespace.xsl: support for sorting classnames, mailto href on
	  maintainer
	  
Tue Sep 25 19:03:52 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* class.xml: updates.

2001-09-14  Dick Porter  <dick@ximian.com>

	* class.xml: Added System.Threading classes

	* maintainers.xml: Added myself

2001-07-17  Sean MacIsaac  <macisaac@ximian.com>

	* ByNamespace.xsl: removed bug for improper handling of namespace.
	eg System.Collections.Blah was showing up in System list.

2001-07-16  Sean MacIsaac  <macisaac@ximian.com>

	* ByNamespace.xsl: Needed by ByNamespace.cs.

	* ByNamespace.cs: Generates html by namespace..

	* ByMaintainer.xsl: Needed by ByMaintainer.cs.

	* ByMaintainer.cs: Generates html by maintainer.

	* class.xml: Class maintainers go here.
	
	* maintainers.xml: Only maintaining email/name pairs here.

	* compare-assembly.cs: Started refactoring to give what Migee
	wants.