@@ -49,5 +49,6 @@
     <person name="Daniel Morgan" email="danmorg@sc.rr.com"/>
     <person name="Rodrigo Moya" email="rodrigo@ximian.com"/>
     <person name="Jonathan Pryor" email="jonpryor@vt.edu"/>
+    <person name="Gonzalo Paniagua" email="gonzalo@ximian.com"/>
 </maintainers>
 
