@@ -1,3 +1,9 @@
+2002-04-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* maintainers.xml: added myself.
+	* class.xml: added System.Net.Sockets.UdpClient and updated
+	System.Net.IPAddress and IPEndPoint.
+
 2002-03-17  Nick Drochak  <ndrochak@gol.com>
 
 	* class.xml: Added class I stubbed out:
